[package]
name = "haruhi"
version = "0.1.0"
authors = ["Max Naumchyk <max.naumch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haruhi_macro = { path = "../haruhi_macro" }
async-trait = "0.1"
regex = "1.3"
